--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 
 <body>
-
+    <header>
+        <nav>
+            <ul>
+                <li>link1</li>
+                <li>link2</li>
+                <li>link3</li>
+                <li>link4</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
