--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <h1>this is a heading</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi impedit sequi nisi, libero non unde ducimus repudiandae neque dolores incidunt porro, officia facilis consequatur facere cum, sunt voluptate adipisci dolorem.</p>
+    </section>
 </body>
 
 </html>
