--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>link1</li>
-                <li>link2</li>
-                <li>link3</li>
-                <li>link4</li>
-            </ul>
-        </nav>
-    </header>
+    <div>
+        <ul>
+            <li>
+                <a href=""></a>
+            </li>
+            <li>
+                <a href=""></a>
+            </li>
+            <li>
+                <a href=""></a>
+            </li>
+        </ul>
+    </div>
     <section>
         <h1>this is a heading</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi impedit sequi nisi, libero non unde ducimus repudiandae neque dolores incidunt porro, officia facilis consequatur facere cum, sunt voluptate adipisci dolorem.</p>
