--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <h1>this is a heading</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi impedit sequi nisi, libero non unde ducimus repudiandae neque dolores incidunt porro, officia facilis consequatur facere cum, sunt voluptate adipisci dolorem.</p>
     </section>
+    <div id="footer">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. In excepturi iste odit dolorum aut quia consequatur, placeat suscipit enim nobis harum incidunt a? Maiores exercitationem rem et, vero quam facere. Copyright 2023
+    </div>
 </body>
 
 </html>
