--- a/index.html
+++ b/index.html
@@ -9,19 +9,16 @@
 </head>
 
 <body>
-    <div>
-        <ul>
-            <li>
-                <a href=""></a>
-            </li>
-            <li>
-                <a href=""></a>
-            </li>
-            <li>
-                <a href=""></a>
-            </li>
-        </ul>
-    </div>
+
+    <header>
+        <nav>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+    </header>
     <section>
         <h1>this is a heading</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi impedit sequi nisi, libero non unde ducimus repudiandae neque dolores incidunt porro, officia facilis consequatur facere cum, sunt voluptate adipisci dolorem.</p>
