--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <div id="footer">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. In excepturi iste odit dolorum aut quia consequatur, placeat suscipit enim nobis harum incidunt a? Maiores exercitationem rem et, vero quam facere. Copyright 2023
     </div>
+
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur, maxime officiis esse ea voluptatem sed consequatur voluptas, aperiam repellendus dolorem ab blanditiis dolorum tempore quae maiores animi odit accusantium autem.
+    </p>
 </body>
 
 </html>
